    (Sidharta Seethana via vvasudev)

    YARN-3866. AM-RM protocol changes to support container resizing. (Meng Ding
    via jianhe)

    YARN-1449. AM-NM protocol changes to support container resizing.
    (Meng Ding & Wangda Tan via jianhe)

    YARN-1645. ContainerManager implementation to support container resizing.
    (Meng Ding & Wangda Tan via jianhe)

  IMPROVEMENTS

    YARN-644. Basic null check is not performed on passed in arguments before
    using them in ContainerManagerImpl.startContainer (Varun Saxena via bobby)

    YARN-1880. Cleanup TestApplicationClientProtocolOnHA
    (ozawa via harsh)

    YARN-3357. Move TestFifoScheduler to FIFO package. (Rohith Sharmaks 
    via devaraj)

    YARN-3356. Capacity Scheduler FiCaSchedulerApp should use ResourceUsage to
    track used-resources-by-label. (Wangda Tan via jianhe)

    YARN-3350. YARN RackResolver spams logs with messages at info level. 
    (Wilfred Spiegelenburg via junping_du)

    YARN-2868. FairScheduler: Metric for latency to allocate first container 
    for an application. (Ray Chiang via kasha)

    YARN-3397. yarn rmadmin should skip -failover. (J.Andreina via kasha)

    YARN-3288. Document and fix indentation in the DockerContainerExecutor code

    YARN-2495. Allow admin specify labels from each NM (Distributed 
    configuration for node label). (Naganarasimha G R via wangda)

    YARN-3258. FairScheduler: Need to add more logging to investigate
    allocations. (Anubhav Dhoot via ozawa)

    YARN-3428. Debug log resources to be localized for a container. (kasha)

    YARN-3424. Change logs for ContainerMonitorImpl's resourse monitoring
    from info to debug. (Anubhav Dhoot via ozawa)

    YARN-3248. Display count of nodes blacklisted by apps in the web UI.
    (Varun Vasudev via xgong)

    YARN-2901. Add errors and warning metrics page to RM, NM web UI. 
    (Varun Vasudev via wangda)

    YARN-3294. Allow dumping of Capacity Scheduler debug logs via